# delb-py-integration-tests

./: .gitignore  .gitmodules  Justfile  README.md  pyproject.toml  requirements.txt  test-location-paths.py  test-lxml-model-concordance.py  test-parse-serialize-equality.py
corpora/: archives-parlementaires  atalanta-texts  casebooks  disco  faust-edition  fetch-web-resources.py  link-submodules.py  medieval-manuscripts-oxford  papyri  ride  verne
corpora/ELTeC/: deu  eng  eng-ext  fra  fra-ext1  fra-ext2  gre  gsw  hrv  hun  ita  lav  lit  lit-ext  nor  pol  por  por-ext  rom  rus  slv  spa  srp  srp-ext  swe  ukr
corpora/sturm-edition/: Q.01.19130406.GAP.01.xml  Q.01.19130412.GAP.01.xml  Q.01.19130513.GAP.01.xml  Q.01.19130603.GAP.01.xml  Q.01.19140115.FMA.01.v1.xml  Q.01.19140518.GAP.01.xml  S.0000020.v3.xml  S.0000020.xml  S.0000024.v1.xml  S.0000024.xml  S.0000028.xml  briefe.xml  orte.xml  personen.xml  quellen.xml  referenzen.xml  werke.xml
git-submodules/: normalize-casebooks.py  normalize-papyri.py  normalize.py
src/dit/: __init__.py  commons.py
src/dit/corpora/: __init__.py  fetch_web_resources.py
src/dit/corpora/normalize/: __init__.py  archives-parlementaires.py  casebooks.py  papyri.py
src/dit/tests/: __init__.py  _test_base.py  location_paths.py  lxml_model_concordance.py  parse_serialize_equality.py
