[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dit"
version = "2024.10.0"
dependencies = [
  "black",
  "flake8",
  "fs",
  "httpx",
  "lxml",
  "mypy",
  "stamina",
  "tqdm",
  "types-lxml",
  "types-tqdm",
  # and a delb installation
]
requires-python = ">=3.12"

[project.scripts]
dit = "dit:main"

[tool.setuptools.packages.find]
where = ["src/"]
