[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dit"
version = "2025.05.8"
dependencies = [
  "black",
  "flake8",
  "fs",
  "httpx",
  "lxml",
  "mypy",
  "stamina",
  "tqdm",
  "types-lxml",
  "types-tqdm",
  # and a delb 0.6-alpha0 installation
]
requires-python = ">=3.13"

[project.scripts]
dit = "dit:main"

[tool.setuptools.packages.find]
where = ["src/"]
